--- a/pub/jiang.yaml
+++ b/pub/jiang.yaml
@@ -1,1 +1,7 @@
-The following link doesn't contain any valid node info: https://jiang.netlify.app
+<html>
+<head><title>500 Internal Server Error</title></head>
+<body bgcolor="white">
+<center><h1>500 Internal Server Error</h1></center>
+<hr><center>nginx/1.14.2</center>
+</body>
+</html>
