--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,40 +8,54 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: ss
-    server: 18.246.240.239
+    server: 35.87.36.143
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
   - &id002
     name: 🇺🇸_US_美国_2
     type: ss
-    server: 52.33.243.193
+    server: 18.246.209.149
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
   - &id003
     name: 🇺🇸_US_美国_3
     type: ss
-    server: 18.236.72.6
+    server: 18.246.240.239
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
   - &id004
     name: 🇺🇸_US_美国_4
     type: ss
-    server: 54.218.30.121
+    server: 52.33.243.193
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
   - &id005
     name: 🇺🇸_US_美国_5
     type: ss
-    server: 34.219.76.253
+    server: 18.236.72.6
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
   - &id006
     name: 🇺🇸_US_美国_6
+    type: ss
+    server: 54.218.30.121
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id007
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 34.219.76.253
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id008
+    name: 🇺🇸_US_美国_8
     type: vmess
     server: 104.21.238.130
     port: 80
@@ -55,8 +69,8 @@ proxies:
       path: /?ed=2048
       headers:
         host: PVR7r.cnbete.life
-  - &id007
-    name: 🇺🇸_US_美国_7
+  - &id009
+    name: 🇺🇸_US_美国_9
     type: vmess
     server: 104.21.238.2
     port: 80
@@ -70,7 +84,7 @@ proxies:
       path: /?ed=2048
       headers:
         host: PVR7r.cnbete.life
-  - &id008
+  - &id010
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
     type: vmess
     server: 104.21.235.6
@@ -85,8 +99,8 @@ proxies:
       path: /?ed=2048
       headers:
         host: m4p9q.cnbete.life
-  - &id009
-    name: 🇺🇸_US_美国_8
+  - &id011
+    name: 🇺🇸_US_美国_10
     type: vmess
     server: 104.21.238.159
     port: 80
@@ -100,8 +114,8 @@ proxies:
       path: /?ed=2048
       headers:
         host: PVR7r.cnbete.life
-  - &id010
-    name: 🇺🇸_US_美国_9
+  - &id012
+    name: 🇺🇸_US_美国_11
     type: vmess
     server: 104.21.238.151
     port: 80
@@ -115,22 +129,22 @@ proxies:
       path: /?ed=2048
       headers:
         host: PVR7r.cnbete.life
-  - &id011
-    name: 🇺🇸_US_美国_10
+  - &id013
+    name: 🇺🇸_US_美国_12
     type: ss
     server: 35.91.125.206
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
-  - &id012
-    name: 🇺🇸_US_美国_11
+  - &id014
+    name: 🇺🇸_US_美国_13
     type: ss
     server: 34.222.20.208
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
-  - &id013
-    name: 🇺🇸_US_美国_12
+  - &id015
+    name: 🇺🇸_US_美国_14
     type: vmess
     server: 45.32.75.248
     port: 37523
@@ -140,8 +154,8 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_13
+  - &id016
+    name: 🇺🇸_US_美国_15
     type: vmess
     server: 174.136.207.168
     port: 12842
@@ -151,7 +165,7 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id015
+  - &id017
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 172.67.130.140
@@ -166,8 +180,8 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id016
-    name: 🇺🇸_US_美国_14
+  - &id018
+    name: 🇺🇸_US_美国_16
     type: vmess
     server: yh2.dtku41.xyz
     port: 8080
@@ -181,8 +195,8 @@ proxies:
       path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
       headers:
         host: per-essex-patterns-bowling.trycloudflare.com
-  - &id017
-    name: 🇺🇸_US_美国_15
+  - &id019
+    name: 🇺🇸_US_美国_17
     type: vmess
     server: 104.21.237.189
     port: 80
@@ -196,8 +210,8 @@ proxies:
       path: /?ed=2048
       headers:
         host: hDIgP.cnbete.life
-  - &id018
-    name: 🇺🇸_US_美国_16
+  - &id020
+    name: 🇺🇸_US_美国_18
     type: vmess
     server: 104.21.238.66
     port: 80
@@ -211,7 +225,7 @@ proxies:
       path: /?ed=2048
       headers:
         host: PVR7r.cnbete.life
-  - &id019
+  - &id021
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
     server: 104.21.8.157
@@ -226,7 +240,7 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id020
+  - &id022
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
     type: vmess
     server: 23.142.200.149
@@ -237,40 +251,10 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id021
-    name: 🇺🇸_US_美国_17
-    type: vmess
-    server: 104.21.237.26
-    port: 80
-    cipher: auto
-    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: hDIgP.cnbete.life
-  - &id022
-    name: 🇺🇸_US_美国_18
-    type: vmess
-    server: 104.21.237.134
-    port: 80
-    cipher: auto
-    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: hDIgP.cnbete.life
   - &id023
     name: 🇺🇸_US_美国_19
     type: vmess
-    server: 104.21.237.184
+    server: 104.21.237.26
     port: 80
     cipher: auto
     uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
@@ -285,10 +269,10 @@ proxies:
   - &id024
     name: 🇺🇸_US_美国_20
     type: vmess
-    server: 104.21.238.200
+    server: 104.21.237.134
     port: 80
     cipher: auto
-    uuid: c6b76370-e614-11ee-b531-205c6d5f5d78
+    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -296,11 +280,11 @@ proxies:
     ws-opts:
       path: /?ed=2048
       headers:
-        host: PVR7r.cnbete.life
+        host: hDIgP.cnbete.life
   - &id025
     name: 🇺🇸_US_美国_21
     type: vmess
-    server: 104.21.237.160
+    server: 104.21.237.184
     port: 80
     cipher: auto
     uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
@@ -315,10 +299,10 @@ proxies:
   - &id026
     name: 🇺🇸_US_美国_22
     type: vmess
-    server: 104.21.237.191
+    server: 104.21.238.200
     port: 80
     cipher: auto
-    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
+    uuid: c6b76370-e614-11ee-b531-205c6d5f5d78
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -326,11 +310,11 @@ proxies:
     ws-opts:
       path: /?ed=2048
       headers:
-        host: hDIgP.cnbete.life
+        host: PVR7r.cnbete.life
   - &id027
     name: 🇺🇸_US_美国_23
     type: vmess
-    server: 104.21.237.124
+    server: 104.21.237.160
     port: 80
     cipher: auto
     uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
@@ -345,6 +329,36 @@ proxies:
   - &id028
     name: 🇺🇸_US_美国_24
     type: vmess
+    server: 104.21.237.191
+    port: 80
+    cipher: auto
+    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hDIgP.cnbete.life
+  - &id029
+    name: 🇺🇸_US_美国_25
+    type: vmess
+    server: 104.21.237.124
+    port: 80
+    cipher: auto
+    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hDIgP.cnbete.life
+  - &id030
+    name: 🇺🇸_US_美国_26
+    type: vmess
     server: en.laobideng.xyz
     port: 8080
     cipher: auto
@@ -357,7 +371,7 @@ proxies:
       path: /
       headers:
         host: en.laobideng.xyz
-  - &id029
+  - &id031
     name: 🇨🇳_CN_中国->🇺🇸_US_美国
     type: vmess
     server: 14.18.91.151
@@ -368,8 +382,8 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id030
-    name: 🇺🇸_US_美国_25
+  - &id032
+    name: 🇺🇸_US_美国_27
     type: vmess
     server: 104.21.84.38
     port: 8880
@@ -383,7 +397,7 @@ proxies:
       path: /
       headers:
         host: us1.laobideng.xyz
-  - &id031
+  - &id033
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
     type: vmess
     server: s1c.v2.v001sss.xyz
@@ -398,7 +412,7 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id032
+  - &id034
     name: 🇺🇸_US_美国->🇿🇦_ZA_南非
     type: vmess
     server: yhnsb3.shabijichang.com
@@ -413,7 +427,7 @@ proxies:
       path: /
       headers:
         host: yhnsb3.shabijichang.com
-  - &id033
+  - &id035
     name: 🇺🇸_US_美国->🇪🇸_ES_西班牙
     type: vmess
     server: us2.laobideng.xyz
@@ -428,8 +442,8 @@ proxies:
       path: /
       headers:
         host: us2.laobideng.xyz
-  - &id034
-    name: 🇺🇸_US_美国_26
+  - &id036
+    name: 🇺🇸_US_美国_28
     type: vmess
     server: us1.laobideng.xyz
     port: 8880
@@ -503,6 +517,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -542,6 +558,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -579,6 +597,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
