--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,167 +6,118 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 35.87.36.143
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    type: vmess
+    server: admin.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: admin.arzonhost.ir
   - &id002
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 18.246.209.149
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: cdn2_de.majutsu.top
     port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
+    cipher: auto
+    uuid: 61abbe9b-ac90-4dcc-99de-35e17f0ce847
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: cdn2_de.majutsu.top
+    network: ws
+    ws-opts:
+      path: /acc
   - &id003
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 18.246.240.239
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
+    type: trojan
+    server: 23.227.38.11
     port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-tr
   - &id004
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 52.33.243.193
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
+    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
+    type: vmess
+    server: 94.140.0.110
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: food.zhaal.ir
   - &id005
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 18.236.72.6
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
+    name: 🇱🇺_LU_卢森堡_1
+    type: vmess
+    server: 78.111.102.232
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
   - &id006
-    name: 🇺🇸_US_美国_6
-    type: ss
-    server: 54.218.30.121
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 162.159.2.9
+    port: 8080
+    cipher: auto
+    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
+      headers:
+        host: technological-mel-fill-decide.trycloudflare.com
   - &id007
-    name: 🇺🇸_US_美国_7
+    name: 🇩🇪_DE_德国
     type: ss
-    server: 34.219.76.253
-    port: 443
-    password: amazonskr05
+    server: 80.92.204.106
+    port: 9094
+    password: rpgbNnU9rDDU4aWZ
     cipher: aes-256-cfb
   - &id008
-    name: 🇺🇸_US_美国_8
+    name: 🇨🇦_CA_加拿大
     type: vmess
-    server: 104.21.238.130
-    port: 80
+    server: 134.122.41.160
+    port: 3389
     cipher: auto
-    uuid: c6b76370-e614-11ee-b531-205c6d5f5d78
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: PVR7r.cnbete.life
+    network: http
   - &id009
-    name: 🇺🇸_US_美国_9
+    name: 🇱🇺_LU_卢森堡_2
     type: vmess
-    server: 104.21.238.2
-    port: 80
+    server: 45.82.31.164
+    port: 3389
     cipher: auto
-    uuid: c6b76370-e614-11ee-b531-205c6d5f5d78
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: PVR7r.cnbete.life
+    network: http
   - &id010
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: vmess
-    server: 104.21.235.6
-    port: 80
-    cipher: auto
-    uuid: f4c98b50-e614-11ee-b430-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: m4p9q.cnbete.life
-  - &id011
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 104.21.238.159
-    port: 80
-    cipher: auto
-    uuid: c6b76370-e614-11ee-b531-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: PVR7r.cnbete.life
-  - &id012
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: 104.21.238.151
-    port: 80
-    cipher: auto
-    uuid: c6b76370-e614-11ee-b531-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: PVR7r.cnbete.life
-  - &id013
-    name: 🇺🇸_US_美国_12
-    type: ss
-    server: 35.91.125.206
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇺🇸_US_美国_13
-    type: ss
-    server: 34.222.20.208
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id015
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: 45.32.75.248
-    port: 37523
-    cipher: auto
-    uuid: 0e7becc2-e807-4b44-c97d-806d094064c0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: 174.136.207.168
-    port: 12842
-    cipher: auto
-    uuid: d7e439a8-9cb4-4c62-9a6a-d36824689a04
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
     server: 172.67.130.140
     port: 2082
@@ -180,53 +131,8 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id018
-    name: 🇺🇸_US_美国_16
-    type: vmess
-    server: yh2.dtku41.xyz
-    port: 8080
-    cipher: auto
-    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
-      headers:
-        host: per-essex-patterns-bowling.trycloudflare.com
-  - &id019
-    name: 🇺🇸_US_美国_17
-    type: vmess
-    server: 104.21.237.189
-    port: 80
-    cipher: auto
-    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: hDIgP.cnbete.life
-  - &id020
-    name: 🇺🇸_US_美国_18
-    type: vmess
-    server: 104.21.238.66
-    port: 80
-    cipher: auto
-    uuid: c6b76370-e614-11ee-b531-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: PVR7r.cnbete.life
-  - &id021
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+  - &id011
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
     type: vmess
     server: 104.21.8.157
     port: 2082
@@ -240,165 +146,8 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id022
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 23.142.200.149
-    port: 11129
-    cipher: auto
-    uuid: 2c69c823-4dad-4dc1-89df-6eeab1dc5fe5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇺🇸_US_美国_19
-    type: vmess
-    server: 104.21.237.26
-    port: 80
-    cipher: auto
-    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: hDIgP.cnbete.life
-  - &id024
-    name: 🇺🇸_US_美国_20
-    type: vmess
-    server: 104.21.237.134
-    port: 80
-    cipher: auto
-    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: hDIgP.cnbete.life
-  - &id025
-    name: 🇺🇸_US_美国_21
-    type: vmess
-    server: 104.21.237.184
-    port: 80
-    cipher: auto
-    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: hDIgP.cnbete.life
-  - &id026
-    name: 🇺🇸_US_美国_22
-    type: vmess
-    server: 104.21.238.200
-    port: 80
-    cipher: auto
-    uuid: c6b76370-e614-11ee-b531-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: PVR7r.cnbete.life
-  - &id027
-    name: 🇺🇸_US_美国_23
-    type: vmess
-    server: 104.21.237.160
-    port: 80
-    cipher: auto
-    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: hDIgP.cnbete.life
-  - &id028
-    name: 🇺🇸_US_美国_24
-    type: vmess
-    server: 104.21.237.191
-    port: 80
-    cipher: auto
-    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: hDIgP.cnbete.life
-  - &id029
-    name: 🇺🇸_US_美国_25
-    type: vmess
-    server: 104.21.237.124
-    port: 80
-    cipher: auto
-    uuid: d31c39e0-e614-11ee-b333-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: hDIgP.cnbete.life
-  - &id030
-    name: 🇺🇸_US_美国_26
-    type: vmess
-    server: en.laobideng.xyz
-    port: 8080
-    cipher: auto
-    uuid: f9c92e9c-5f92-4ff7-99a1-91a973b6ec57
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: en.laobideng.xyz
-  - &id031
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: vmess
-    server: 14.18.91.151
-    port: 50004
-    cipher: auto
-    uuid: 1d8963ab-0cd8-4091-93ca-4c6a7dbcd1f2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id032
-    name: 🇺🇸_US_美国_27
-    type: vmess
-    server: 104.21.84.38
-    port: 8880
-    cipher: auto
-    uuid: f9c92e9c-5f92-4ff7-99a1-91a973b6ec57
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us1.laobideng.xyz
-  - &id033
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+  - &id012
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_4
     type: vmess
     server: s1c.v2.v001sss.xyz
     port: 2082
@@ -412,43 +161,73 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id034
-    name: 🇺🇸_US_美国->🇿🇦_ZA_南非
+  - &id013
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
-    server: yhnsb3.shabijichang.com
+    server: mizban.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mizban.arzonhost.ir
+  - &id014
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: russia.com
     port: 80
     cipher: auto
-    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
+    uuid: bd8c41a8-7598-4c28-9965-522545e14892
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /api/v3/download.getFile
       headers:
-        host: yhnsb3.shabijichang.com
-  - &id035
-    name: 🇺🇸_US_美国->🇪🇸_ES_西班牙
+        host: ssrsub.v03.ssrsub.com
+  - &id015
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
     type: vmess
-    server: us2.laobideng.xyz
+    server: 23.227.38.23
     port: 8080
     cipher: auto
-    uuid: f9c92e9c-5f92-4ff7-99a1-91a973b6ec57
+    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
       headers:
-        host: us2.laobideng.xyz
-  - &id036
-    name: 🇺🇸_US_美国_28
+        host: uh-lawyers-instruments-kernel.trycloudflare.com
+  - &id016
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
     type: vmess
-    server: us1.laobideng.xyz
-    port: 8880
+    server: yh3.freeh1.xyz
+    port: 8080
     cipher: auto
-    uuid: f9c92e9c-5f92-4ff7-99a1-91a973b6ec57
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      headers:
+        host: larger-marketing-amounts-skin.trycloudflare.com
+  - &id017
+    name: 🇺🇸_US_美国->🇧🇬_BG_保加利亚
+    type: vmess
+    server: cf.kfcvme50.life
+    port: 80
+    cipher: auto
+    uuid: bc5e1ebf-9602-4177-b890-18e9d4cd23be
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -456,7 +235,36 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: us1.laobideng.xyz
+        host: hytron.kfcvme50.life
+  - &id018
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 172.67.116.48
+    port: 80
+    cipher: auto
+    uuid: 22a13aa2-4854-44cb-e090-ec71ab84b1ff
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: wap.hostmjj.com
+  - &id019
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: 95.164.33.62
+    port: 443
+    udp: true
+    password: 0b1371aa-649d-41dc-9126-338c87936500
+    sni: sourceforge.net
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /websocket
+      headers:
+        host: se1.trojanvpn.de
 proxy-groups:
   - name: PROXY
     type: select
@@ -502,23 +310,6 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -543,23 +334,6 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -582,23 +356,6 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
