--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -21,108 +21,12 @@ proxies:
       headers:
         host: admin.arzonhost.ir
   - &id002
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: cdn2_de.majutsu.top
-    port: 443
-    cipher: auto
-    uuid: 61abbe9b-ac90-4dcc-99de-35e17f0ce847
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: cdn2_de.majutsu.top
-    network: ws
-    ws-opts:
-      path: /acc
-  - &id003
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
-    type: trojan
-    server: 23.227.38.11
-    port: 443
-    udp: true
-    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
-    sni: syndication-statutes-wanted-logo.trycloudflare.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /argox-tr
-  - &id004
-    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
-    type: vmess
-    server: 94.140.0.110
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: food.zhaal.ir
-  - &id005
-    name: 🇱🇺_LU_卢森堡_1
-    type: vmess
-    server: 78.111.102.232
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id006
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 162.159.2.9
-    port: 8080
-    cipher: auto
-    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
-      headers:
-        host: technological-mel-fill-decide.trycloudflare.com
-  - &id007
-    name: 🇩🇪_DE_德国
-    type: ss
-    server: 80.92.204.106
-    port: 9094
-    password: rpgbNnU9rDDU4aWZ
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 134.122.41.160
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id009
-    name: 🇱🇺_LU_卢森堡_2
-    type: vmess
-    server: 45.82.31.164
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id010
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
-    server: 172.67.130.140
-    port: 2082
+    server: 104.21.4.14
+    port: 2086
     cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -130,38 +34,8 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: s1c.v2.v001sss.xyz
-  - &id011
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
-    type: vmess
-    server: 104.21.8.157
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id012
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_4
-    type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id013
+        host: admin.arzonhost.ir
+  - &id003
     name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
     server: mizban.arzonhost.ir
@@ -176,58 +50,24 @@ proxies:
       path: /
       headers:
         host: mizban.arzonhost.ir
-  - &id014
-    name: 🇺🇸_US_美国_2
+  - &id004
+    name: 🇱🇺_LU_卢森堡_1
     type: vmess
-    server: russia.com
-    port: 80
+    server: 45.82.31.164
+    port: 3389
     cipher: auto
-    uuid: bd8c41a8-7598-4c28-9965-522545e14892
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id015
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
+    network: http
+  - &id005
+    name: 🇦🇪_AE_阿联酋->🇫🇷_FR_法国
     type: vmess
-    server: 23.227.38.23
-    port: 8080
+    server: 94.140.0.110
+    port: 8880
     cipher: auto
-    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
-      headers:
-        host: uh-lawyers-instruments-kernel.trycloudflare.com
-  - &id016
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
-    type: vmess
-    server: yh3.freeh1.xyz
-    port: 8080
-    cipher: auto
-    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
-      headers:
-        host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id017
-    name: 🇺🇸_US_美国->🇧🇬_BG_保加利亚
-    type: vmess
-    server: cf.kfcvme50.life
-    port: 80
-    cipher: auto
-    uuid: bc5e1ebf-9602-4177-b890-18e9d4cd23be
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -235,8 +75,64 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: hytron.kfcvme50.life
-  - &id018
+        host: food.zhaal.ir
+  - &id006
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-tr
+  - &id007
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 134.122.41.160
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id008
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: v014.583181.xyz
+    port: 8443
+    cipher: auto
+    uuid: 6bcb91d7-3d6b-40ad-93f4-b326d0ed20a4
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: v014.583181.xyz
+  - &id009
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 54.186.125.168
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id010
+    name: 🇱🇺_LU_卢森堡_2
+    type: vmess
+    server: 78.111.102.232
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id011
     name: 🇺🇸_US_美国_3
     type: vmess
     server: 172.67.116.48
@@ -251,8 +147,36 @@ proxies:
       path: /
       headers:
         host: wap.hostmjj.com
-  - &id019
+  - &id012
     name: 🇺🇸_US_美国_4
+    type: ss
+    server: 54.245.36.10
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 35.86.136.148
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id014
+    name: 🇩🇪_DE_德国
+    type: vmess
+    server: 5.181.23.58
+    port: 80
+    cipher: auto
+    uuid: 6eff4314-ad4c-4ebc-b1d0-d3b79656f43d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: internet.life.com.by
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id015
+    name: 🇺🇸_US_美国_6
     type: trojan
     server: 95.164.33.62
     port: 443
@@ -265,6 +189,72 @@ proxies:
       path: /websocket
       headers:
         host: se1.trojanvpn.de
+  - &id016
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: channel.hopev2ray.link
+    port: 443
+    cipher: auto
+    uuid: 9aaceca0-bc5b-49e6-a83f-088e14d94434
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: no1-vmess.sshmax.xyz
+  - &id017
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 162.159.130.208
+    port: 8080
+    cipher: auto
+    uuid: 55021a7c-bd6c-418e-be95-ceac8ba27b45
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 55021a7c-bd6c-418e-be95-ceac8ba27b45-vm
+      headers:
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
+  - &id018
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 104.21.68.203
+    port: 8443
+    cipher: auto
+    uuid: 6bcb91d7-3d6b-40ad-93f4-b326d0ed20a4
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: v014.583181.xyz
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: v014.583181.xyz
+  - &id019
+    name: 🇺🇸_US_美国_10
+    type: trojan
+    server: 3.14.211.153
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trojan.burgerip.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 99.81.109.6
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.burgerip.co.uk
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -310,6 +300,7 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
+      - *id020
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -334,6 +325,7 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
+      - *id020
   - name: SELECT
     type: select
     proxies:
@@ -356,6 +348,7 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
+      - *id020
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
