--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -36,33 +36,19 @@ proxies:
       headers:
         host: admin.arzonhost.ir
   - &id003
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: mizban.arzonhost.ir
-    port: 2086
-    cipher: auto
-    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
-    alterId: 0
-    tls: false
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
-      headers:
-        host: mizban.arzonhost.ir
+      path: /argox-tr
   - &id004
-    name: 🇱🇺_LU_卢森堡_1
-    type: vmess
-    server: 45.82.31.164
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id005
-    name: 🇦🇪_AE_阿联酋->🇫🇷_FR_法国
+    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
     port: 8880
@@ -76,53 +62,8 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id006
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
-    type: trojan
-    server: 23.227.38.11
-    port: 443
-    udp: true
-    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
-    sni: syndication-statutes-wanted-logo.trycloudflare.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /argox-tr
-  - &id007
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 134.122.41.160
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id008
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: v014.583181.xyz
-    port: 8443
-    cipher: auto
-    uuid: 6bcb91d7-3d6b-40ad-93f4-b326d0ed20a4
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: v014.583181.xyz
-  - &id009
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 54.186.125.168
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇱🇺_LU_卢森堡_2
+  - &id005
+    name: 🇱🇺_LU_卢森堡
     type: vmess
     server: 78.111.102.232
     port: 3389
@@ -132,129 +73,109 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
+  - &id006
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: russia.com
+    port: 80
+    cipher: auto
+    uuid: bd8c41a8-7598-4c28-9965-522545e14892
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id007
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    type: vmess
+    server: cdn.vds-server.ir
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cdn.vds-server.ir
+  - &id008
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+    type: vmess
+    server: mizban.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mizban.arzonhost.ir
+  - &id009
+    name: 🇸🇬_SG_新加坡->🇫🇷_FR_法国
+    type: vmess
+    server: 8.222.174.108
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id010
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 505.outline-vpn.cloud
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: kellie.makeup
+    network: ws
+    ws-opts:
+      path: /linkvws
+      headers:
+        host: kellie.makeup
   - &id011
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 172.67.116.48
-    port: 80
-    cipher: auto
-    uuid: 22a13aa2-4854-44cb-e090-ec71ab84b1ff
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wap.hostmjj.com
-  - &id012
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 54.245.36.10
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 35.86.136.148
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: 5.181.23.58
-    port: 80
-    cipher: auto
-    uuid: 6eff4314-ad4c-4ebc-b1d0-d3b79656f43d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    servername: internet.life.com.by
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id015
-    name: 🇺🇸_US_美国_6
+    name: 🇫🇷_FR_法国
     type: trojan
-    server: 95.164.33.62
-    port: 443
-    udp: true
-    password: 0b1371aa-649d-41dc-9126-338c87936500
-    sni: sourceforge.net
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /websocket
-      headers:
-        host: se1.trojanvpn.de
-  - &id016
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: channel.hopev2ray.link
-    port: 443
-    cipher: auto
-    uuid: 9aaceca0-bc5b-49e6-a83f-088e14d94434
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: no1-vmess.sshmax.xyz
-  - &id017
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 162.159.130.208
-    port: 8080
-    cipher: auto
-    uuid: 55021a7c-bd6c-418e-be95-ceac8ba27b45
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 55021a7c-bd6c-418e-be95-ceac8ba27b45-vm
-      headers:
-        host: widescreen-instruction-breakdown-postage.trycloudflare.com
-  - &id018
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 104.21.68.203
-    port: 8443
-    cipher: auto
-    uuid: 6bcb91d7-3d6b-40ad-93f4-b326d0ed20a4
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: v014.583181.xyz
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: v014.583181.xyz
-  - &id019
-    name: 🇺🇸_US_美国_10
-    type: trojan
-    server: 3.14.211.153
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trojan.burgerip.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 99.81.109.6
+    server: 13.38.167.222
     port: 22222
     udp: true
     password: telegram-id-privatevpns
     sni: trojan.burgerip.co.uk
     skip-cert-verify: true
     network: tcp
+    alpn:
+      - http/1.1
+  - &id012
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -293,14 +214,6 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -318,14 +231,6 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
   - name: SELECT
     type: select
     proxies:
@@ -341,14 +246,6 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
